@@ -1,3 +1,6 @@
+======================
+    FIXED: bookmark icons were not saved correctly
+
 1.60.0
 ======================
     ADDED: New Gorilla-style icon by www.OnExige.com
